Remove -xxmaxpermsize from jvm opts