@@ -3,7 +3,6 @@
 -Xms1g
 -Xmx1g
 -Xss16m
--XX:PermSize=256m
 -XX:MaxPermSize=350m
 -XX:+DoEscapeAnalysis
 -XX:+UnlockExperimentalVMOptions
